@@ -24,6 +24,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Hook in estimated time remaining for task
 - phoromatic: Report percent complete of task to server
 - phoromatic: Add system component table
+- phoromatic: Add new reporting features to server
 
 Phoronix Test Suite 5.4 Milestone 6
 19 November 2014
